--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
   </head>
   <body data-spy="scroll" data-target="#navbar-example">
       <div id="app"></div>
-  <script type="text/javascript" src="dist/bundle.js"></script></body>
+  </body>
 </html>
